--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
         <ul>
             <li><button onclick="app.loadTool('introduccion1')"class="active">Introducción</button></li>
             <li><button onclick="app.loadTool('distanciaPuntos')">Distancia entre puntos del plano</button></li>
-            <li><button onclick="app.loadTool('sistemaRectas')">Sistemas Lineales y NL</button></li>
+            <li><button onclick="app.loadTool('sistemaRectas')">Sistemas Lineales</button></li>
             <li><button onclick="app.loadTool('conceptoCirculo')">Concepto de Círculo</button></li>
             <li><button onclick="app.loadTool('conceptoElipse')">Concepto de Elipse</button></li>
             <li><button onclick="app.loadTool('conceptoHiperbola')">Concepto de Hipérbola</button></li>
